Solved the problem of Button activity method.Now just correct your algorithm(I provided a comment below in the second Activity Java class) and follow the button activity method for the other buttons too

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
         android:id="@+id/main_activity_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello 320 People!"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120sp"
-        android:textSize="30sp"
-        />
+        android:layout_marginTop="120dp"
+        android:text="Hello 320 People!"
+        android:textSize="30sp" />
 
     <EditText
         android:id="@+id/bit_stream"
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="500sp"
+        android:layout_marginTop="400sp"
         android:text="Get Line Coding!" />
 
 </RelativeLayout>
