--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
     <TextView
         android:id="@+id/main_activity_text"
         android:layout_width="wrap_content"
@@ -15,7 +14,6 @@
         android:layout_marginTop="120dp"
         android:text="Hello 320 People!"
         android:textSize="30sp" />
-
     <EditText
         android:id="@+id/bit_stream"
         android:layout_width="wrap_content"
@@ -27,13 +25,17 @@
         android:inputType="number"
         android:textSize="20sp"
         />
-
     <Button
         android:id="@+id/input_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="400sp"
+        android:layout_below="@id/bit_stream"
+        android:layout_marginTop="40sp"
         android:text="Get Line Coding!" />
-
 </RelativeLayout>
+
+
+
+
+
