--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -6,80 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".SecondActivity">
 
-    <Button
-        android:id="@+id/nrzIButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/bitOne"
-        android:layout_alignEnd="@+id/bitTwo"
-        android:layout_marginTop="45dp"
-        android:text="NRZ-I" />
-
-    <Button
-        android:id="@+id/nrzLButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nrzIButton"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="-57dp"
-        android:layout_toEndOf="@+id/bitThree"
-        android:text="NRZ-L" />
-
-    <Button
-        android:id="@+id/nrzUniButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nrzLButton"
-        android:layout_alignEnd="@+id/bitEight"
-        android:layout_marginTop="-49dp"
-        android:layout_marginEnd="12dp"
-        android:text="NRZ-Uni" />
-
-    <Button
-        android:id="@+id/mlt3Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nrzUniButton"
-        android:layout_alignStart="@+id/nrzIButton"
-        android:layout_marginTop="54dp"
-        android:text="MLT-3" />
-
-    <Button
-        android:id="@+id/amiButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/mlt3Button"
-        android:layout_alignEnd="@+id/nrzLButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="-54dp"
-        android:layout_marginEnd="6dp"
-        android:onClick="amiDO"
-        android:text="AMI" />
-
-    <Button
-        android:id="@+id/manButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/amiButton"
-        android:layout_marginStart="-52dp"
-        android:layout_marginTop="-44dp"
-        android:layout_toEndOf="@+id/bitSeven"
-        android:text="MAN" />
-
-    <Button
-        android:id="@+id/dmanButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/manButton"
-        android:layout_alignStart="@+id/amiButton"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="48dp"
-        android:text="D-Man" />
     <ImageView
         android:id="@+id/bitOne"
         android:layout_width="40dp"
         android:layout_height="100dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:layout_marginLeft="5dp"
         android:src="@drawable/empty" />
 
@@ -88,7 +19,7 @@
         android:layout_width="40dp"
         android:layout_height="100dp"
         android:layout_toRightOf="@id/bitOne"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty" />
 
     <ImageView
@@ -96,7 +27,7 @@
         android:layout_width="40dp"
         android:layout_height="100dp"
         android:layout_toRightOf="@id/bitTwo"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty" />
 
     <ImageView
@@ -104,7 +35,7 @@
         android:layout_width="40dp"
         android:layout_height="100dp"
         android:layout_toRightOf="@id/bitThree"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty" />
 
     <ImageView
@@ -112,7 +43,7 @@
         android:layout_width="40dp"
         android:layout_height="100dp"
         android:layout_toRightOf="@id/bitFour"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty" />
 
     <ImageView
@@ -120,7 +51,7 @@
         android:layout_width="40dp"
         android:layout_height="100dp"
         android:layout_toRightOf="@id/bitFive"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty" />
 
     <ImageView
@@ -128,7 +59,7 @@
         android:layout_width="40dp"
         android:layout_height="100dp"
         android:layout_toRightOf="@id/bitSix"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty" />
 
     <ImageView
@@ -136,7 +67,7 @@
         android:layout_width="40dp"
         android:layout_height="100dp"
         android:layout_toRightOf="@id/bitSeven"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty" />
 
     <ImageView
@@ -144,7 +75,7 @@
         android:layout_width="40dp"
         android:layout_height="100dp"
         android:layout_toRightOf="@id/bitEight"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty" />
 
     <ImageView
@@ -152,7 +83,90 @@
         android:layout_width="40dp"
         android:layout_height="100dp"
         android:layout_toRightOf="@id/bitNine"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty" />
 
+    <Button
+        android:id="@+id/nrzIButton"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/bitOne"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:onClick="nrzIDO"
+        android:text="NRZ-I" />
+
+    <Button
+        android:id="@+id/nrzLButton"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nrzIButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:onClick="nrzLDO"
+        android:text="NRZ-L" />
+
+    <Button
+        android:id="@+id/nrzUniButton"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nrzLButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:onClick="nrzUniDO"
+        android:text="NRZ-Uni" />
+
+    <Button
+        android:id="@+id/mlt3Button"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nrzUniButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:onClick="mlt3DO"
+        android:text="MLT-3" />
+
+    <Button
+        android:id="@+id/amiButton"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/mlt3Button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:onClick="amiDO"
+        android:text="AMI" />
+
+    <Button
+        android:id="@+id/manButton"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/amiButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:onClick="manDO"
+        android:text="MAN" />
+
+    <Button
+        android:id="@+id/dmanButton"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/manButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:onClick="dmanDO"
+        android:text="D-Man" />
+
+    <TextView
+        android:id="@+id/bitText"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:layout_marginTop="20dp"
+        android:textSize="25dp"
+        android:layout_alignLeft="@id/bitOne"
+        android:text="0000000000"
+        android:textAlignment="center" />
+
+
 </RelativeLayout>
+
+
